<?xml version="1.0"?>
<package>
    <name>sfm_estimator</name>
    <version>0.0.0</version>
    <description>The sfm_estimator package</description>
    <maintainer email="1205464428@qq.com">zhouchang</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>

    <export></export>
</package>